--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tailwind-boiler",
   "version": "1.0.0",
-  "description": "A page for family memories",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "postcss:watch": "postcss src/assets/css/index.pcss -o src/assets/css/index.css --env development -w",
@@ -9,7 +9,7 @@
     "parcel:serve": "parcel src/index.html",
     "parcel:watch": "parcel watch src/index.html",
     "parcel:build": "parcel build src/index.html",
-    "clean": "rm -rf dist .cache",
+    "clean": "rm -rf dist .cache .parcel-cache",
     "build": "npm-run-all -s clean postcss:build parcel:build",
     "start": "npm-run-all -s clean -p postcss:watch parcel:serve"
   },
@@ -17,6 +17,8 @@
   "license": "ISC",
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^3.1.3",
+    "@parcel/packager-raw-url": "^2.0.0-beta.2",
+    "@parcel/transformer-webmanifest": "^2.0.0-beta.2",
     "autoprefixer": "^10.2.5",
     "cssnano": "^4.1.11",
     "eslint": "^7.24.0",
