--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "build": "npm-run-all -s clean postcss:build parcel:build",
     "start": "npm-run-all -s clean -p postcss:watch parcel:serve"
   },
-  "staticFiles": {
-    "staticPath": "./public/test.text",
-    "watcherGlob": "**"
-  },
+  "multipleStaticFileCopier": [
+    {
+      "origin": "public",
+      "destination": "dist/"
+    }
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -31,6 +33,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "npm-run-all": "^4.1.5",
     "parcel": "*",
+    "parcel-reporter-multiple-static-file-copier": "^1.0.5",
     "postcss": "^8.2.10",
     "postcss-cli": "^8.3.1",
     "postcss-fontpath": "^1.0.0",
@@ -41,7 +44,6 @@
     "tailwindcss": "^2.1.1"
   },
   "dependencies": {
-    "parcel-bundler": "^1.12.5",
-    "parcel-plugin-static-files-copy": "^2.6.0"
+    "parcel-bundler": "^1.12.5"
   }
 }
