Add Files to the static folder
- Files will be copied and put in the root folder
-
-

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "multipleStaticFileCopier": [
     {
-      "origin": "public",
+      "origin": "static",
       "destination": "dist/"
     }
   ],
