--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "tailwind-boiler",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "",
   "scripts": {
     "postcss:watch": "postcss src/assets/css/index.pcss -o src/assets/css/index.css --env development -w",
     "postcss:build": "postcss src/assets/css/index.pcss -o src/assets/css/index.css --env production",
     "parcel:serve": "parcel src/index.html",
     "parcel:watch": "parcel watch src/index.html",
-    "parcel:build": "parcel build src/index.html",
+    "parcel:build": "parcel build src/index.html src/404.html",
     "clean": "rm -rf dist .cache .parcel-cache",
     "build": "npm-run-all -s clean postcss:build parcel:build",
     "start": "npm-run-all -s clean -p postcss:watch parcel:serve"
@@ -44,6 +44,7 @@
     "tailwindcss": "^2.1.1"
   },
   "dependencies": {
+    "confetti-js": "^0.0.18",
     "parcel-bundler": "^1.12.5"
   }
 }
