--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "npm-run-all": "^4.1.5",
-    "parcel": "*",
+    "parcel": "^2.0.0-beta.2",
     "parcel-reporter-multiple-static-file-copier": "^1.0.5",
     "postcss": "^8.2.10",
     "postcss-cli": "^8.3.1",
@@ -44,7 +44,6 @@
     "tailwindcss": "^2.1.1"
   },
   "dependencies": {
-    "confetti-js": "^0.0.18",
-    "parcel-bundler": "^1.12.5"
+    "confetti-js": "^0.0.18"
   }
 }
